--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-	<title>Parcel Sandbox</title>
-	<meta charset="UTF-8" />
-</head>
+	<head>
+		<title>Parcel Sandbox</title>
+		<meta charset="UTF-8" />
+	</head>
 
-<body>
-	<div id="app"></div>
+	<body>
+		<div id="app"></div>
 
-	<script src="src/index.js">
-	</script>
-</body>
+		<div>Second Change</div>
+		<script src="src/index.js">
+		</script>
+	</body>
 
 </html>
