--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 
 	<body>
 		<div id="app"></div>
-
-		<div>Second Change</div>
+		<div>This is my first change</div>
 		<script src="src/index.js">
 		</script>
 	</body>
