--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 	<body>
 		<div id="app"></div>
-		<div>Third change</div>
+		<div>Forth change</div>
 		<script src="src/index.js">
 		</script>
 	</body>
